2005-04-18  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-notify.pl (my_exit): The comment was incorrect,
	there are no network connections to close gracefully.

	* tests/t_drop_attr.at: New test, similar to t_rename_attr.at.
	* testsuite.at: Add it.

2005-04-18  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Dealing with a Fork): Clarify (hopefully) what we
	mean when we say that "update" is a dangerous command.

2005-04-17  Matt Johnston  <matt@ucc.asn.au>

	* change_set.cc (confirm_proper_tree): use a std::set rather than
	dynamic_bitset for the ancestor list, improving performance for
	common tree structures.
	* basic_io.cc: reserve() a string

2005-04-17  Matt Johnston  <matt@ucc.asn.au>

	* packet.cc: fix up unit test compilation.
	* transforms.cc: fix up unit test compilation.

2005-04-17  Matt Johnston  <matt@ucc.asn.au>

	* vocab_terms.hh: remove commented out lines.

2005-04-17  Matt Johnston  <matt@ucc.asn.au>

	* Move base64<gzip> code as close to the database as possible,
	to avoid unnecessary inflating and deflating.

2005-04-17  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Branching and Merging): A few small edits.

2005-04-17  Nathaniel Smith  <njs@codesourcery.com>

	* change_set.cc (path_item, sanity_check_path_item): Mark things
	inline.

2005-04-17  Henrik Holmboe <henrik@holmboe.se>

	* contrib/monotone-notify.pl: Add signal handlers.  Correct some
	typos.
	(my_exit): New function that does a cleanup and exit.

2005-04-17  Olivier Andrieu  <oliv__a@users.sourceforge.net>

	* transforms.cc: fix glob_to_regexp assertions

2005-04-17  Sebastian Spaeth <Sebastian@sspaeth.de>
	
	* tests/t_db_kill_rev_locally.at: new test; 
	make sure that db kill_rev_locally works as intended

2005-04-17  Sebastian Spaeth <Sebastian@sspaeth.de>

	* commands.cc,database.cc: add 'db kill_rev_locally <id>' command
	still missing: documentation and autotests. Otherwise seems ok.
	
2005-04-17  Richard Levitte  <richard@levitte.org>